first working version

--- a/src/temp.html
+++ b/src/temp.html
@@ -14,7 +14,12 @@
         <li><a href="#" class="contact-tab">Contact</a></li>
       </ul>
     </nav>
-    <header><h1>Salsipuedes Cafe</h1></header>
+    <header>
+      <h1>
+        <span class="first-word">Salsipuedes</span>
+        <span class="second-word">Cafe</span>
+      </h1>
+    </header>
     <div class="content"></div>
     <footer>Copyright &copy; | Ozkar Alvarez</footer>
   </body>
