First working version || not responsive

--- a/menu.html
+++ b/menu.html
@@ -4,20 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/c830af475b.js"
-      crossorigin="anonymous"
-    ></script>
     <title>Mystic Mocha Cafe</title>
   <script defer src="main.ed8dbb7e1bec68a5096d.js"></script></head>
   <body>
+    <div class="frosted-bg"></div>
     <nav>
       <ul>
-        <li><a href="index.html" class="home-tab active">Home</a></li>
+        <li><a href="index.html" class="home-tab">Home</a></li>
         <li>
           <a href="restaurant.html" class="restaurant-tab">Restaurant</a>
         </li>
-        <li><a href="menu.html" class="menu-tab">Menu</a></li>
+        <li><a href="menu.html" class="menu-tab active">Menu</a></li>
         <a href="index.html">
           <h1 class="company-name">
             <span class="first-word">Mystic Mocha</span>
