home page styled

--- a/src/html/catering.html
+++ b/src/html/catering.html
@@ -136,7 +136,7 @@
             </p>
           </div>
         </div>
-        <button type="submit" class="submit-btn">Submit</button>
+        <a href="#" class="submit-form-btn">Submit</a>
       </form>
     </div>
     <footer>Copyright &copy; | Ozkar Alvarez</footer>
