--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,7 +10,7 @@
     ></script>
     <title>Mystic Mocha Cafe</title>
   </head>
-  <body>
+  <body class="no-bg">
     <nav>
       <ul>
         <li><a href="index.html" class="home-tab active">Home</a></li>
@@ -29,7 +29,34 @@
         <li><a href="catering.html" class="catering-tab">Catering</a></li>
       </ul>
     </nav>
-    <div class="content"></div>
+    <div class="home-wrapper">
+      <div class="home">
+        <div class="home-images">
+          <img
+            src="./barista.jpg"
+            alt="Barista working behind cafe bar"
+            class="barista"
+          />
+          <img
+            src="./latte-pour.jpg"
+            alt="Womans hand pouring frothing milk in latte"
+            class="latte-pour"
+          />
+        </div>
+
+        <div class="home-subheading">
+          <h2>Heritage you can taste.</h2>
+          <h3 class="home-h3">
+            Exported coffee beans from Jalisco, Mexico to the heart of North
+            Park, San Diego.
+          </h3>
+          <p>
+            Mystic Mocha is an urban oasis cultivating health and community
+            through whole foods, peaceful atmosphere and friendly service.
+          </p>
+        </div>
+      </div>
+    </div>
     <footer>Copyright &copy; | Ozkar Alvarez</footer>
   </body>
 </html>
