--- a/src/html/restaurant.html
+++ b/src/html/restaurant.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mystic Mocha Cafe</title>
   </head>
-  <body>
+  <body class="no-bg">
     <div class="frosted-bg"></div>
     <nav>
       <ul>
