organized files and optimized images

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -33,12 +33,12 @@
       <div class="home">
         <div class="home-images">
           <img
-            src="./barista.jpg"
+            src="./images/barista.jpg"
             alt="Barista working behind cafe bar"
             class="barista"
           />
           <img
-            src="./latte-pour.jpg"
+            src="./images/latte-pour.jpg"
             alt="Womans hand pouring frothing milk in latte"
             class="latte-pour"
           />
