--- a/src/html/restaurant.html
+++ b/src/html/restaurant.html
@@ -38,7 +38,7 @@
       <div class="shop-bio-container">
         <div class="shop-bio">
           <img
-            src="mex-eagle-transparent.png"
+            src="./images/mex-eagle-transparent.png"
             alt="mexican eagle eating snake emblem"
             class="mex-eagle"
           />
@@ -66,7 +66,7 @@
       <div class="image-section">
         <img
           class="coffee-banner"
-          src="coffee-banner.jpg"
+          src="./images/coffee-banner.jpg"
           alt="cup of coffee on white and black background"
           height="200px"
           width="1200px"
@@ -75,7 +75,7 @@
       <div class="owner-bio-container">
         <img
           class="owner-headshot"
-          src="owner-headshot.jpg"
+          src="./images/owner-headshot.jpg"
           alt="Owner, Israel Lizarraga"
         />
         <div class="owner-bio-words">
@@ -94,7 +94,7 @@
           </p>
         </div>
         <img
-          src="farm-transparent.png"
+          src="./images/farm-transparent.png"
           alt="transparent drawing of farm on a hill"
           class="farm"
         />
