first working fully responsive version

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -90,7 +90,7 @@
             artists, writers, sensory scientists, bakers, designers, and
             all-around dreamers.
           </p>
-          <a href="catering.html" class="order-catering">Order Catering Now</a>
+          <a href="catering.html" class="order-catering">Order Catering</a>
         </div>
         <div class="home-social">
           <a href=""><i class="fa-brands fa-snapchat"></i></a>
