--- a/src/html/location.html
+++ b/src/html/location.html
@@ -67,8 +67,8 @@
         <p><a href="#">View on google maps</a></p>
       </div>
       <div class="hours-container">
-        <h2>Opening Hours</h2>
-        <p>Open today till 5:00pm</p>
+        <h2>Hours</h2>
+
         <table>
           <tr>
             <td>Monday</td>
