--- a/src/html/restaurant.html
+++ b/src/html/restaurant.html
@@ -62,7 +62,7 @@
       <div class="shop-bio-container">
         <div class="shop-bio">
           <img
-            src="./images/mex-eagle-transparent.png"
+            src="./images/mex-eagle-transparent.PNG"
             alt="mexican eagle eating snake emblem"
             class="mex-eagle"
           />
