--- a/src/html/index.html
+++ b/src/html/index.html
@@ -54,25 +54,25 @@
     </nav>
     <div class="home-wrapper">
       <img
-        src="/images/mexico-outline.png"
+        src="/src/images/mexico-outline.png"
         alt="outline drawing of mexico's states"
         class="mexico-outline trans-bg"
       />
 
       <img
-        src="/images/coffee-logo-transparent.png"
+        src="/src/images/coffee-logo-transparent.png"
         alt="clip art of coffee cup "
         class="coffee-transparent trans-bg"
       />
       <div class="home">
         <div class="home-images">
           <img
-            src="./images/barista.jpg"
+            src="/src/images/barista.jpg"
             alt="Barista working behind cafe bar"
             class="barista"
           />
           <img
-            src="./images/latte-pour.jpg"
+            src="/src/images/latte-pour.jpg"
             alt="Womans hand pouring frothing milk in latte"
             class="latte-pour"
           />
