--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,7 +72,7 @@
             class="barista"
           />
           <img
-            src="images/latte-pour.jpg"
+            src="latte-pour.jpg"
             alt="Womans hand pouring frothing milk in latte"
             class="latte-pour"
           />
