--- a/src/html/restaurant.html
+++ b/src/html/restaurant.html
@@ -62,7 +62,7 @@
       <div class="shop-bio-container">
         <div class="shop-bio">
           <img
-            src="/src/images/mex-eagle-transparent.png"
+            src="mex-eagle-transparent.png"
             alt="mexican eagle eating snake emblem"
             class="mex-eagle"
           />
@@ -90,7 +90,7 @@
       <div class="image-section">
         <img
           class="coffee-banner"
-          src="/src/images/coffee-banner.jpg"
+          src="coffee-banner.jpg"
           alt="cup of coffee on white and black background"
           height="200px"
           width="1200px"
@@ -99,7 +99,7 @@
       <div class="owner-bio-container">
         <img
           class="owner-headshot"
-          src="/src/images/owner-headshot.jpg"
+          src="owner-headshot.jpg"
           alt="Owner, Israel Lizarraga"
         />
         <div class="owner-bio-words">
@@ -118,7 +118,7 @@
           </p>
         </div>
         <img
-          src="/src/images/farm-transparent.png"
+          src="farm-transparent.png"
           alt="transparent drawing of farm on a hill"
           class="farm"
         />
