--- a/src/html/contact.html
+++ b/src/html/contact.html
@@ -8,7 +8,7 @@
       src="https://kit.fontawesome.com/c830af475b.js"
       crossorigin="anonymous"
     ></script>
-    <title>Mystic Mocha Cafe</title>
+    <title>Mystic Mocha Cafe || Contact</title>
   </head>
   <body>
     <div class="frosted-bg"></div>
