--- a/src/html/restaurant.html
+++ b/src/html/restaurant.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Mystic Mocha Cafe</title>
+    <title>Mystic Mocha Cafe || Restaurant</title>
   </head>
   <body class="no-bg">
     <div class="frosted-bg"></div>
